argocd/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: mern-devops
  hostnames:
    - argocd.cndb.atkaridarshan.online
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: argocd-server
          port: 80
